--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ nav{
     display: flex;
     position: fixed;
     width: 100%;
-    background:rgb(0, 0, 0, 1);
+    background:rgb(0, 0, 0, 0.5);
     overflow:auto;
     z-index: 1;
 }
@@ -60,6 +60,28 @@ padding-left: 260px;
 .img-three {
 max-width: 74%;
 max-height: 74%;
+}
+.img-top {
+    padding-top: 70px;
+    max-height: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+    }
+.img-bottom {
+    max-height: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+    }
+.pad35 {
+    padding-top: 35px;
+    text-align: center;
+}
+.pad {
+    padding-left: 25px;
 }
 h1{
 font-family: 'Roboto Mono', monospace;
